Refactoring my spaghetti js

--- a/index_gc_152.html
+++ b/index_gc_152.html
@@ -208,8 +208,8 @@
 								<tr>
 									<td>Streams Popout</td>
 									<td><div class="btn-group" data-toggle="buttons-radio">
-											<button id="spTrue" alt="spTrue" type="button" class="btn btn-info btn-small spformat">On</button>
-											<button id="spFalse" alt="spFalse" type="button" class="btn btn-info btn-small spformat">Off</button>
+											<button id="spTrue" data-ispopout="true" type="button" class="btn btn-info btn-small spformat">On</button>
+											<button id="spFalse" data-ispopout="false" type="button" class="btn btn-info btn-small spformat">Off</button>
 									</div></td>
 								</tr>
 								<tr>
@@ -242,7 +242,7 @@
 								<dd>No. Unlike many extensions, this one does not. As soon as you close the extension, you are freeing resource. (Except for firefox)</dd>
 								
 								<dt>What channels are you taking VODs from ?</dt>
-								<dd>VODs section will show you the 15 most recent uploads from <a target="_blank" target="_blank" href="http://www.youtube.com/user/joinDOTA">joinDota</a>, <a target="_blank" href="http://www.youtube.com/user/dotasltv">StarLadder.TV</a>, <a target="_blank" href="http://www.youtube.com/sheevergaming">Sheever</a>, <a target="_blank" href="http://www.youtube.com/user/PurgeGamers/">Purge</a>, <a target="_blank" href="http://www.youtube.com/user/beyondthesummittv/">BeyondTheSummit</a>, <a target="_blank" href="http://www.youtube.com/user/ldDOTA">LDdota</a>, and <a target="_blank" href="http://www.youtube.com/user/GoDzStudios">GoDz</a>.</dd>
+								<dd>VODs section will show you the 15 most recent uploads from <a target="_blank" target="_blank" href="http://www.youtube.com/user/joinDOTA">joinDota</a>, <a target="_blank" href="http://www.youtube.com/user/dotasltv">StarLadder.TV</a>, <a target="_blank" href="http://www.youtube.com/sheevergaming">Sheever</a>, <a target="_blank" href="http://www.youtube.com/user/PurgeGamers/">Purge</a>, <a target="_blank" href="http://www.youtube.com/user/beyondthesummittv/">BeyondTheSummit</a>, <a target="_blank" href="http://www.youtube.com/user/ldDOTA">LDdota</a>, <a target="_blank" href="http://www.youtube.com/user/GoDzStudios">GoDz</a>, and <a target="_blank" href="http://www.youtube.com/user/sagan9ne">Sagan9ne</a>.</dd>
 
 								<dt>Why are some news bolded ?</dt>
 								<dd>It's to show news that are hot. (Over 50 comments)</dd>
