--- a/index_gc_152.html
+++ b/index_gc_152.html
@@ -45,7 +45,6 @@
 					<div class="accordion-inner">
 						<table id="ggNewsList" class="table table-hover table-condensed">
 							<tbody id="tbody_ggNews">
-								<tr class="gif"></tr>
 							</tbody>
 						</table>
 					</div>
@@ -77,7 +76,6 @@
 					<div class="accordion-inner">
 						<table id="finishedList" class="table table-hover table-condensed">
 							<tbody id="tbody_jdReMatches">
-								<tr class="gif"></tr>
 							</tbody>
 						</table>
 					</div>
@@ -109,7 +107,6 @@
 					<div class="accordion-inner">
 						<table id="gg_finishedList" class="table table-hover table-condensed">
 							<tbody id="tbody_ggReMatches">
-								<tr class="gif"></tr>
 							</tbody>
 						</table>
 					</div>
@@ -141,7 +138,6 @@
 					<div class="accordion-inner">
 						<table id="gg_rankList" class="table table-hover table-condensed">
 							<tbody id="tbody_ggRankings">
-								<tr class="gif"></tr>
 							</tbody>
 						</table>
 					</div>
@@ -173,7 +169,6 @@
 					<div class="accordion-inner">
 						<table id="vodsList" class="table table-hover table-condensed">
 							<tbody id="tbody_vods">
-								<tr class="gif"></tr>
 							</tbody>
 						</table>
 					</div>
@@ -305,10 +300,10 @@
 			</div>	
 		</div>
 	</div>
-	<script src="js/jquery-1.9.1.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/date.format.js"></script>
+	<script src="js/vendor/jquery-1.9.1.min.js"></script>
+	<script src="js/vendor/bootstrap.js"></script>
+	<script src="js/vendor/date.format.js"></script>
 	<script src="js/match.js"></script>
-	<script src="js/ga.js"></script>
+	<script src="js/vendor/ga.js"></script>
 </body> 
 </html>
