--- a/index_gc_152.html
+++ b/index_gc_152.html
@@ -238,7 +238,7 @@
 								<dd>No. Unlike many extensions, this one does not. As soon as you close the extension, you are freeing resource. (Except for firefox)</dd>
 								
 								<dt>What channels are you taking VODs from ?</dt>
-								<dd>VODs section will show you the 15 most recent uploads from <a target="_blank" target="_blank" href="http://www.youtube.com/user/joinDOTA">joinDota</a>, <a target="_blank" href="http://www.youtube.com/user/dotasltv">StarLadder.TV</a>, <a target="_blank" href="http://www.youtube.com/sheevergaming">Sheever</a>, <a target="_blank" href="http://www.youtube.com/user/PurgeGamers/">Purge</a>, <a target="_blank" href="http://www.youtube.com/user/beyondthesummittv/">BeyondTheSummit</a>, <a target="_blank" href="http://www.youtube.com/user/ldDOTA">LDdota</a>, <a target="_blank" href="http://www.youtube.com/user/GoDzStudios">GoDz</a>, and <a target="_blank" href="http://www.youtube.com/user/sagan9ne">Sagan9ne</a>.</dd>
+								<dd>VODs section will show you the 15 most recent uploads from the most popular DotA2 channels (currently 12). Contact me if you want to add yours.</dd>
 
 								<dt>Why are some news bolded ?</dt>
 								<dd>It's to show news that are hot. (Over 50 comments)</dd>
@@ -258,8 +258,9 @@
 					<div class="accordion-inner">
 						<small>
 						<ul>
-							<li><b>1.5.2</b> - 1/03/2013
+							<li><b>1.5.2</b> - 1/05/2013
 							<ul>
+								<li>Added more VODs channels</li>
 								<li>Fixed Spoiler Bug</li>
 								<li>Fixed crap load of bug and refactored some shit</li>
 								<li>Performance Improvements</li>
@@ -284,7 +285,7 @@
 								</tr>
 								<tr>
 									<td><b>Author:</b></td>
-									<td>Wololo</td>
+									<td>Hamed "Wololo" Al-Khabaz</td>
 								</tr>
 								<tr>
 									<td><b>Contact:</b></td>
