--- a/index_gc_162.html
+++ b/index_gc_162.html
@@ -12,7 +12,7 @@
   <script src="js/vendor/ga.js"></script>
 </head>
 <body>
-  <div class="tabbable tabs-left">
+  <div class="tabbable tabs-top">
     <ul id="menu" class="nav nav-tabs">
       <li><a class="menutab hovmenu" id="nav_news" title="News" href="#news" data-toggle="tab"><i class="icon-home"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_jd" title="joinDota Matches" href="#jd_matches" data-toggle="tab">jD</a></li>
@@ -20,6 +20,7 @@
       <li><a class="menutab hovmenu" id="nav_ranking" title="Rankings" href="#rankings" data-toggle="tab"><i class="icon-signal"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_stream" title="Streams and VODs" title="News" href="#streams_vods" data-toggle="tab"><i class="icon-play"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_sett" title="Settings" href="#settings" data-toggle="tab"><i class="icon-wrench"></i></a></li>
+      <li><a class="menutab" id="nav_outpost" title="Outpost" href="#outpost" data-toggle="tab"><img src="img/outpost.ico" alt=""></a></li>
       <li><a class="menutab" id="nav_update" title="Refresh" href="#"><i class="icon-refresh"></i></a></li>
     </ul>
   </div>
@@ -27,8 +28,8 @@
     <!-- ========================= News Tab ========================= -->
     <div class="tab-pane alignborder" id="news">
       <ul class="nav nav-tabs" id="js-newstab">
-        <li class="active"><a class="submenu" data-toggle="tab" href="#jdNews">joinDota News &nbsp;<span title="Go to: http://www.joindota.com/" data-link="http://www.joindota.com/" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu" data-toggle="tab" href="#ggNews">GosuGamers News &nbsp;<span title="Go to: http://www.gosugamers.net/dota2" data-link="http://www.gosugamers.net/dota2" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#jdNews">joinDota News &nbsp;<span title="Go to: http://www.joindota.com/" data-link="http://www.joindota.com/" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#ggNews">GosuGamers News &nbsp;<span title="Go to: http://www.gosugamers.net/dota2" data-link="http://www.gosugamers.net/dota2" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="jdNews">
@@ -50,8 +51,8 @@
     <!-- ========================= joinDota Tab ========================= -->
     <div class="tab-pane alignborder" id="jd_matches">
       <ul class="nav nav-tabs">
-        <li class="active"><a class="submenu" data-toggle="tab" href="#tb-jdummatch">Upcoming Matches &nbsp;<span title="Go to: http://www.joindota.com/en/matches" data-link="http://www.joindota.com/en/matches" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu" data-toggle="tab" href="#tb-jdrrmatch">Recent Results</a></li>
+        <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#tb-jdummatch">Upcoming Matches &nbsp;<span title="Go to: http://www.joindota.com/en/matches" data-link="http://www.joindota.com/en/matches" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#tb-jdrrmatch">Recent Results</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="tb-jdummatch">
@@ -73,8 +74,8 @@
     <!-- ========================= GosuGamers Tab ========================= -->
     <div class="tab-pane alignborder" id="gg_acc_matches">
       <ul class="nav nav-tabs">
-        <li class="active"><a class="submenu" data-toggle="tab" href="#tb-ggummatch">Upcoming Matches &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/gosubet" data-link="http://www.gosugamers.net/dota2/gosubet" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu" data-toggle="tab" href="#tb-ggrrmatch">Recent Results</a></li>
+        <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#tb-ggummatch">Upcoming Matches &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/gosubet" data-link="http://www.gosugamers.net/dota2/gosubet" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#tb-ggrrmatch">Recent Results</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="tb-ggummatch">
@@ -96,8 +97,8 @@
     <!-- ========================= Rankings Tab ========================= -->
     <div class="tab-pane alignborder" id="rankings">
       <ul class="nav nav-tabs">
-        <li class="active"><a class="submenu" data-toggle="tab" href="#jdRankings">jD Standings &nbsp;<span title="Go to: http://www.joindota.com/en/edb/teams" data-link="http://www.joindota.com/en/edb/teams" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu" data-toggle="tab" href="#ggRankings">GG Standings &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/rankings/clans" data-link="http://www.gosugamers.net/dota2/rankings/clans" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#jdRankings">jD Standings &nbsp;<span title="Go to: http://www.joindota.com/en/edb/teams" data-link="http://www.joindota.com/en/edb/teams" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#ggRankings">GG Standings &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/rankings/clans" data-link="http://www.gosugamers.net/dota2/rankings/clans" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="jdRankings">
@@ -119,9 +120,9 @@
     <!-- ========================= Streams/VODs Tab ========================= -->
     <div class="tab-pane alignborder" id="streams_vods">
       <ul class="nav nav-tabs">
-        <li class="active"><a class="submenu" data-toggle="tab" href="#streams">Live Streams</a></li>
-        <li><a class="submenu" data-toggle="tab" href="#dota2vods">Dota2Vods &nbsp;<span title="Go to: http://dota2vods.net/" data-link="http://dota2vods.net/" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu" data-toggle="tab" href="#vods">VODs</a></li>
+        <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#streams">Live Streams</a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">Dota2Vods &nbsp;<span title="Go to: http://dota2vods.net/" data-link="http://dota2vods.net/" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#vods">VODs</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="streams">
@@ -184,6 +185,13 @@
                       <button id="spoilerFalse" data-isspoiler="false" type="button" class="btn btn-info btn-small spoilerformat">Off</button>
                   </div></td>
                 </tr>
+                <tr>
+                  <td>Menu Position</td>
+                  <td><div class="btn-group" data-toggle="buttons-radio">
+                      <button id="menuTop" data-position="top" type="button" class="btn btn-info btn-small menu-position">Top</button>
+                      <button id="menuLeft" data-position="left" type="button" class="btn btn-info btn-small menu-position">Left</button>
+                  </div></td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -227,13 +235,10 @@
           <div class="accordion-inner">
             <small>
             <ul>
-              <li><b>1.6.1</b> - 30/4/2013
+              <li><b>1.6.2</b> - 16/5/2013
               <ul>
-                <li style="text-decoration: line-through;">Changed layout. Clickless son.</li>
-                <li>Added <a href="http://dota2vods.net">Dota2Vods.net</a> VODs</li>
-                <li>Lots of bug fixes in regards to jD's updates</li>
-                <li>Timezone DST fix</li>
-                <li>More VOD channels!</li>
+                <li>Added settings to change layout</li>
+                <li>Added my project to help gamers travel to places</li>
               </ul>
               </li>
             </ul>
@@ -251,7 +256,7 @@
               <tbody>
                 <tr>
                   <td><b>Version:</b></td>
-                  <td>1.6.1</td>
+                  <td>1.6.2</td>
                 </tr>
                 <tr>
                   <td><b>Author:</b></td>
@@ -275,6 +280,27 @@
         </div>
       </div>  
     </div>
+
+    <!-- ========================= Outoist Tab ========================= -->
+    <div class="tab-pane alignborder" id="outpost">
+      <div class="text-center">
+        <a class="ti2img" target="_blank" href="http://www.dota2.com/tournaments/international/announcement/"></a>
+      </div>
+      <div class="media">
+        <a class="pull-left outpostimg" target="_blank" href="http://outpost.travel">
+          <img class="media-object" src="img/outpost.png" alt="outpost logo">
+        </a>
+        <div class="media-body">
+          <a href="http://outpost.travel" target="_blank"><h4 class="media-heading">Outpost Travel</h4></a>
+          <span class="outpostdesc">
+            Planning to attend The International 3 in person ? Living in North America ? <a href="http://outpost.travel" target="_blank">Outpost</a> is here to nerf those hefty prices into something more affordable for the average Dota player. Just go to <a href="http://outpost.travel" target="_blank">Outpost</a> and input your location to where you want to travel (in this case it would be Seattle). You will find rideshares going to any city and place rentals posted by house owners. No more having a headache to rent a car or booking expensive hotels.
+            <hr>
+            <p><a href="http://outpost.travel" target="_blank">Outpost</a> is a personal side project to help Dota players afford to attend TI3. It could be used for any other purpose. Let me know what you think at <a href="mailto:info@outpost.travel">info@outpost.travel</a></p>
+          </span>
+        </div>
+      </div>
+    </div>
+
   </div>
   <script src="js/vendor/jquery-1.9.1.min.js"></script>
   <script src="js/vendor/bootstrap.js"></script>
