fix misspelling on "devided" (divided)

--- a/index_gc_162.html
+++ b/index_gc_162.html
@@ -221,7 +221,7 @@
                 <dd>It's to show news that are hot. (Over 50 comments)</dd>
 
                 <dt>Joindota has points not elo, what gives ?</dt>
-                <dd>I devided the points by 22 to give the same elo feeling that GosuGamers gives.</dd>
+                <dd>I divided the points by 22 to give the same elo feeling that GosuGamers gives.</dd>
               </dl>
             </small>
           </div>
