--- a/index_gc_162.html
+++ b/index_gc_162.html
@@ -98,7 +98,7 @@
     <div class="tab-pane alignborder" id="rankings">
       <ul class="nav nav-tabs">
         <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#jdRankings">jD Standings &nbsp;<span title="Go to: http://www.joindota.com/en/edb/teams" data-link="http://www.joindota.com/en/edb/teams" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#ggRankings">GG Standings &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/rankings/clans" data-link="http://www.gosugamers.net/dota2/rankings/clans" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#ggRankings">GG Standings &nbsp;<span title="Go to: http://www.gosugamers.net/dota2/rankings" data-link="http://www.gosugamers.net/dota2/rankings" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="jdRankings">
@@ -121,7 +121,7 @@
     <div class="tab-pane alignborder" id="streams_vods">
       <ul class="nav nav-tabs">
         <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#streams">Live Streams</a></li>
-        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">Dota2Vods &nbsp;<span title="Go to: http://dota2vods.net/" data-link="http://dota2vods.net/" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">Match Vods &nbsp;<span title="Go to: http://http://www.dotacinema.com/vods" data-link="http://www.dotacinema.com/vods" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
         <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#vods">VODs</a></li>
       </ul>
       <div class="tab-content">
@@ -221,7 +221,7 @@
                 <dd>It's to show news that are hot. (Over 50 comments)</dd>
 
                 <dt>Joindota has points not elo, what gives ?</dt>
-                <dd>I devided the points by 22 to give the same elo feeling that GosuGamers gives.</dd>
+                <dd>I divided the points by 22 to give the same elo feeling that GosuGamers gives.</dd>
               </dl>
             </small>
           </div>
