--- a/index_gc_162.html
+++ b/index_gc_162.html
@@ -121,7 +121,7 @@
     <div class="tab-pane alignborder" id="streams_vods">
       <ul class="nav nav-tabs">
         <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#streams">Live Streams</a></li>
-        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">Match Vods &nbsp;<span title="Go to: http://http://www.dotacinema.com/vods" data-link="http://www.dotacinema.com/vods" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
+        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">Match VODs &nbsp;<span title="Go to: http://http://www.dotacinema.com/vods" data-link="http://www.dotacinema.com/vods" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
         <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#vods">VODs</a></li>
       </ul>
       <div class="tab-content">
